--- a/module1_fundamentals/demo/m1.lesson02/js_basics.html
+++ b/module1_fundamentals/demo/m1.lesson02/js_basics.html
@@ -93,7 +93,7 @@
     }
 
     class Worker extends Person {
-        constructor(age, work) {
+        constructor(age, work = 'superhero') {
             super(age);
             this.work = work;
         }
