--- a/module1_fundamentals/demo/m1.lesson04/context_fetch.html
+++ b/module1_fundamentals/demo/m1.lesson04/context_fetch.html
@@ -64,8 +64,8 @@
     const test3 = test.func.bind(test2);
     test3();
 
-    // try it: create  3 Child objects which toString() will show origin is active
-    // DO NOT change origin obhject or Child class
+    // try it: create 3 Child objects which toString() will show origin is active
+    // DO NOT change origin object or Child class
 
     const origin = {state: 'origin is active'};
 
