--- a/module1_fundamentals/demo/m1.lesson08/lodash.html
+++ b/module1_fundamentals/demo/m1.lesson08/lodash.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='UTF-8'>
     <title> Working with libraries</title>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.min.js'></script>
+    <script src='https://cdn.jsdelivr.net/npm/lodash@4.17.11/lodash.min.js'></script>
 </head>
 <body>
 
@@ -12,19 +12,25 @@
     fetch('https://jsonplaceholder.typicode.com/posts')
         .then(res => res.json())
         .then(data => {
-            console.log(data);
+            // console.log(data);
             // console.dir(data);
             // console.table(data);
 
 
-            // sort - by title length. 
+            // sort - by title length.
+            const sortedData = _.sortBy(data, o => o.title);
+            const sortedData2 = _.sortBy(data, ['userId', 'title']);
+            console.log(sortedData);
             // how should we do it natively?
 
             // clone
-            
+            const  sortedDataClone = sortedData;
+
             // filter
-            
+            const fliteredData = _.filter(data, (o) => (o.userId === 5 && o.title.length > 30));
+
             // map
+            const mapedData =_.map(data, (o) => [o.id,o.title]);
         });
 </script>
 </body>
