--- a/module1_fundamentals/demo/m1.lesson02/caesar.html
+++ b/module1_fundamentals/demo/m1.lesson02/caesar.html
@@ -48,8 +48,8 @@
 
             <section id="dec-section" class="column hidden">
                 <h1>Decryption</h1>
-                <label for="enc-key">Key</label>
-                <input type="text" id="enc-key">
+                <label for="des-key">Key</label>
+                <input type="text" id="des-key">
                 <button>Decrypt</button>
                 <p></p>
             </section>
