--- a/module2_frontend/demo/m2.lesson01/react-intro-2.html
+++ b/module2_frontend/demo/m2.lesson01/react-intro-2.html
@@ -49,9 +49,9 @@
   'use strict';
   // tasks:
   // 1. see https://babeljs.io/repl
-  // 2. Add a <ul> element with 3 items
+  // 2. Add a header, and a <ul> element with 3 items
   // 3. Externalize to another class
-  // 4. practice: externalize title to another class, change text to "Todo lists"
+  // 4. practice: externalize header to another class, change text to "Todo lists"
   // Note: render function must have single root 'tag' (creatElement)
   // 5. Extra: Convert header into function form
   class App extends React.Component {
